# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("./../../../multimedia_camera_framework.gni")

ohos_fuzztest("StreamCaptureFuzzTest") {
  module_out_path = "camera_framework/cameradevice"
  fuzz_config_file = "../streamcapture_fuzzer"

  include_dirs = [ "../../../services/camera_service/include" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "stream_capture_fuzzer.cpp" ]

  include_dirs = [
    "//drivers/peripheral/display/interfaces/include",
    "//foundation/graphic/graphic_2d/frameworks/surface/include",
    "//foundation/multimedia/camera_framework/services/camera_service/include",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/base/include",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/client/include",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/server/include",
    "//foundation/multimedia/camera_framework/interfaces/inner_api/native/camera/include",
    "//foundation/window/window_manager/interfaces/innerkits/dm",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
    "//drivers/peripheral/camera/interfaces/include",
    "//drivers/peripheral/camera/interfaces/hdi_ipc",
    "//drivers/peripheral/camera/interfaces/hdi_ipc/utils/include",
    "//drivers/peripheral/camera/interfaces/hdi_ipc/callback/device/include",
    "//drivers/peripheral/camera/interfaces/hdi_ipc/callback/operator/include",
    "//drivers/peripheral/camera/interfaces/hdi_ipc/callback/host/include",
    "//base/security/access_token/interfaces/innerkits/token_setproc/include",
    "//utils/system/safwk/native/include",
    "//drivers/peripheral/display/interfaces/include",
  ]

  deps = [ "../../../services/camera_service:camera_service" ]
  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libprivacy_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "drivers_interface_camera:libcamera_proxy_1.0",
    "drivers_interface_camera:libcamera_proxy_1.1",
    "drivers_interface_camera:metadata",
    "graphic_2d:librender_service_client",
    "graphic_2d:surface",
    "hdf_core:libhdi",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "window_manager:libdm",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":StreamCaptureFuzzTest" ]
}
