# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("cameraframeworktest") {
  testonly = true
  deps = [
    "moduletest:camera_base_function_moduletest",
    "moduletest:camera_deferred_photo_moduletest",
    "moduletest:camera_deferred_video_moduletest",
    "moduletest:camera_format_YUV_moduletest",
    "moduletest:camera_photo_moduletest",
    "moduletest:camera_moving_photo_moduletest",
    "moduletest:camera_session_moduletest",
    "unittest/camera_common_utils_test",
    "unittest/camera_deferred_unittest:camera_deferred_unittest",
    "unittest/camera_ndk_unittest:camera_ndk_test",
    "unittest/camera_service:camera_service_unittest",
    "unittest/framework_native:camera_framework_native_unittest",
  ]
}
