# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("./../../../../multimedia_camera_framework.gni")

js_declaration("camera_js") {
  part_name = "camera_framework"
  sources = [ "./@ohos.multimedia.camera.d.ts" ]
}

ohos_copy("camera_declaration") {
  sources = [ "./@ohos.multimedia.camera.d.ts" ]
  outputs = [ target_out_dir + "/$target_name/" ]
  module_source_dir = target_out_dir + "/$target_name"
  module_install_name = ""
}

ohos_shared_library("camera_napi") {
  include_dirs = [
    "${multimedia_camera_framework_path}/interfaces/kits/js/camera_napi/include",
    "${multimedia_camera_framework_path}/interfaces/inner_api/native/camera/include",
    "${multimedia_camera_framework_path}/services/camera_service/include",
    "${multimedia_camera_framework_path}/frameworks/native/camera/include",
    "${multimedia_camera_framework_path}/services/camera_service/binder/base/include/",
    "${multimedia_camera_framework_path}/services/camera_service/binder/client/include",
    "${multimedia_camera_framework_path}/services/camera_service/binder/server/include",
    "//foundation/multimedia/graphic/graphic_2d/interfaces/inner_api/surface",
  ]
  sources = [
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/camera_napi_utils.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/input/camera_info_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/input/camera_input_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/input/camera_manager_callback_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/input/camera_manager_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/input/camera_mute_listener_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/input/camera_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/input/camera_pre_launch_config_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/input/camera_profile_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/input/camera_size_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/input/torch_listener_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/mode/mode_manager_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/mode/portrait_session_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/native_module_ohos_camera.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/output/camera_output_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/output/camera_sketch_data_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/output/metadata_object_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/output/metadata_output_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/output/photo_output_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/output/preview_output_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/output/video_output_napi.cpp",
    "${multimedia_camera_framework_path}/frameworks/js/camera_napi/src/session/camera_session_napi.cpp",
  ]
  deps = [ "${multimedia_camera_framework_path}/frameworks/native/camera:camera_framework" ]
  external_deps = [
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "drivers_interface_camera:libcamera_proxy_1.0",
    "drivers_interface_camera:libcamera_proxy_1.1",
    "graphic_2d:surface",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "image_framework:image",
    "image_framework:image_native",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../../../cfi_blocklist.txt"
  }
  cflags = [ "-fPIC" ]
  cflags_cc = cflags
  relative_install_dir = "module/multimedia"
  part_name = "camera_framework"
  subsystem_name = "multimedia"
}
